Sorting-Visual/sorting.css
body {
  font-family: Arial;
  margin: 0;
}

.header {
  padding: 10px;
  text-align: left;
  background: #2e2e2e;
  color: white;
  outline-color: black;
  outline-width: 2px;
  outline-style: solid;
  font-size: 15px;
}

.button {
  background-color: transparent;
  background-repeat: no-repeat;
  overflow: hidden;
  border: none;
  color: rgb(255, 255, 255);
  padding: 5px 8px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 2px 1px;
  cursor: pointer;
  outline: none;
}

.clearButton {
  background-color: transparent;
  background-repeat: no-repeat;
  overflow: hidden;
  border: none;
  color: rgb(255, 255, 255);
  padding: 5px 8px;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 16px;
  margin: 2px 1px;
  cursor: pointer;
  outline: none;
}

.arraySize {
  margin: auto;
  margin-left: 10px;
  margin-right: 10px ;
  display: inline-block;
  font-size: 16px;
}

.slidecontainer {
  width: 5%; /* Width of the outside container */
}

.slider {
  -webkit-appearance: none;  /* Override default CSS styles */
  appearance: none;
  width: 10%; /* Full-width */
  height: 15px; /* Specified height */
  background: #d3d3d3; /* Grey background */
  outline: none; /* Remove outline */
  opacity: 0.7; /* Set transparency (for mouse-over effects on hover) */
  -webkit-transition: .2s; /* 0.2 seconds transition on hover */
  transition: opacity .2s;
  display: inline-block;
}
 
/* Mouse-over effects */
.slider:hover {
  opacity: 1; /* Fully shown on mouse-over */
}
  
/* The slider handle (use -webkit- (Chrome, Opera, Safari, Edge) and -moz- (Firefox) to override default look) */
.slider::-webkit-slider-thumb {
  -webkit-appearance: none;
  appearance: none;
  width: 25px;
  height: 25px;
  background: rgb(255, 255, 255);
  cursor: pointer;
}
  
.slider::-moz-range-thumb {
  width: 25px;
  height: 25px;
  background: rgb(255, 255, 255);
  cursor: pointer;
}

.arrayDiv {
  position: relative;
  outline-style: solid;
  outline-width: 1px;
  outline-color: black;
  display: inline-block;
  text-align: center;
}

.content {
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  transform: rotateX(180deg);
  text-align: center;
  display: inline-block;
  clear: both;
  padding: -50px;
}

.createdBy {
  position: fixed;
  width: 100%;
  text-align: center;
  bottom: 0;
  color: #000000;
}

